--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
                 android:text="Edit Texts"
                 android:textSize="20dip"
                 flatui:textColor="main"
-                flatui:theme="@array/candy" />
+                flatui:theme="@array/grass" />
 
             <LinearLayout
                 android:orientation="vertical"
@@ -56,7 +56,7 @@
                     android:hint="Flat style"
                     android:includeFontPadding="true"
                     flatui:fieldStyle="flat"
-                    flatui:theme="@array/candy" />
+                    flatui:theme="@array/grass" />
 
                 <com.cengalabs.flatui.views.FlatEditText
                     android:id="@+id/edittext_box"
@@ -68,7 +68,7 @@
                     android:hint="Box style"
                     android:includeFontPadding="true"
                     flatui:fieldStyle="box"
-                    flatui:theme="@array/candy" />
+                    flatui:theme="@array/grass" />
 
                 <com.cengalabs.flatui.views.FlatEditText
                     android:id="@+id/edittext_transparentbox"
@@ -80,7 +80,7 @@
                     android:hint="Transparent box style"
                     android:includeFontPadding="true"
                     flatui:fieldStyle="transparent"
-                    flatui:theme="@array/candy" />
+                    flatui:theme="@array/grass" />
 
                 <com.cengalabs.flatui.views.FlatEditText
                     android:id="@+id/edittext_transparent"
