update readme and properties for version 2.1.0

--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -92,7 +92,7 @@
                     android:hint="Transparent"
                     android:includeFontPadding="true"
                     flatui:fl_fieldStyle="transparent"
-                    flatui:fl_theme="@array/candy"
+                    flatui:fl_theme="@array/grass"
                     flatui:fl_borderWidth="0dp" />
 
             </LinearLayout>
